2004-11-04 Alex Chapiro
	Update files.
	* library/spawner.mak
	* library/starter/starter.mak

2004-09-06 Alex Chapiro

	Fix for PR 75677
	* os/win32/x86/spawner.dll
	* library/Win32ProcessEx.c

2004-08-13 Alex Chapiro

	Fix for PR PR 71601

	* os/win32/x86/spawner.dll
	* os/win32/x86/starter.exe
	* library/Win32ProcessEx.c
	* library/starter/killer.cpp
	* library/starter/killer.h
	* library/starter/starter.cpp
	* library/starter/starter.dsp
	* library/starter/starter.dsw

2004-07-20 Alex Chapiro

	Fix for PR 70359
	Binaries regenerated

	* library/Win32ProcessEx.c
	* library/starter/starter.cpp
	* os/win32/x86/spawner.dll
	* os/win32/x86/starter.dll

2004-04-29 Alex Chapiro

	Support for I18N within spawner.

2004-03-25 David Inglis
	
	Added platform attribute to processlist extension
	
	* plugin.xml

2004-03-01 James Ciesielski

	Marked string as non-externalized
	
	* src/org/eclipse/cdt/internal/core/win32/ProcessList.java

2004-02-17 Alain Magloire

	Remove old Eclipse2.0 interface and
	use what 3.0 provides instead.

	* src/org/eclipse/cdt/internal/core/win32/ProcessList.java

2004-02-12 Alex Chapiro

	Update starter and spawner to use named pipes.
	Update the binaries.

2003-08-29 Alex Chapiro

	This patch just increase command line buffer up to OS limit (2K). It also
	replaces java/lang/Exception to java/io/IOException in order to unify error
	processing.

	* library/Win32ProcessEx.c
	* library/starter/starter.cpp
	* library/spawner.dsw
	* os/win32/x86/spawner.dll
	* os/win32/x86/starter.exe

2003-04-30 Alex Chapiro

	* library/listtasks: new Folder
	* library/listtasks/listtasks.cpp: New file.
	* library/listtasks/listtasks.dsp: New file.
	* library/listtasks/listtasks.dsw: New file.
	* library/listtasks/listtasks.h: New file.
	* library/listtasks/StdAfx.cpp: New file.
	* library/listtasks/StdAfx.h: New file.
	* os/win32/x86/listtasks.exe: Rebuild

2003-04-30 Alain Magloire

	* src/org/eclipse/cdt/internal/core/win32/ProcessList.java (parseTaskList):