@@ -1,3 +1,10 @@
+2004-11-16 Alain Magloire
+
+	Update the library interface to changes in java from Spawner
+	* library/Spawner.h
+	* Win32ProcessEx.c
+	* os/win32/x86/spawner.dll
+
 2004-11-04 Alex Chapiro
 	Update files.
 	* library/spawner.mak
